crates/cox-tui/src/snapshots/cox_tui__status__tests__ctx_share_no_color.snap
---
source: crates/cox-tui/src/status.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 1 },
    content: [
        "sonnet-5 · ctx ▰▰▰▱▱ 7% · $0.00/5 · [default]               ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
