crates/cox-tui/src/snapshots/cox_tui__status__tests__plugin_segments_drop_first_when_narrow.snap
---
source: crates/cox-tui/src/status.rs
assertion_line: 530
expression: narrow
---
sonnet-5 · ctx ▱▱▱▱▱ 0% · $0.00/5 · workspace-write · 0 tasks · [default]
