crates/cox-tui/src/snapshots/cox_tui__status__tests__status_line_shows_architect_badge.snap
---
source: crates/cox-tui/src/status.rs
expression: line
---
sonnet-5 · ctx ▱▱▱▱▱ 0% · $0.00/5 · workspace-write · 0 tasks · cache 0% · [architect] [plan]
