crates/cox-tui/src/snapshots/cox_tui__status__tests__status_script_row_is_drawn_above_the_status_line.snap
---
source: crates/cox-tui/src/status.rs
expression: screen
---



> Enter send · Shift+Tab mode cycle · @ file · / command
main · 3 files · hello from the script
sonnet-5 · ctx ▱▱▱▱▱ 0% · $0.00/5 · [default]
